--- a/staff/oihane-unciti/precourse/airlines/project2.html
+++ b/staff/oihane-unciti/precourse/airlines/project2.html
@@ -83,7 +83,7 @@ alert("Welcome "+ name +" \n"+ flightsMessage )
      
      switch(j){
             case "buscar":
-            var search= prompt("menor/mayor/igual")
+            var search= prompt("menor/mayor/igual");
             var money= prompt("Cuanto dinero?")
             for (var i = 0; i < flights.length; i++) {
     
