--- a/staff/oihane-unciti/precourse/bingo/project3.html
+++ b/staff/oihane-unciti/precourse/bingo/project3.html
@@ -159,7 +159,7 @@ function newGame(askForName) {
 function newBingocard(){
   var newCard= prompt("New Bingo Card y/n")
   if(newCard=="y"){
-    newGame(false)
+    newGame(false);
   }
 }
 
