correct css link

--- a/staff/carolina-zhou/blog-layout/index.html
+++ b/staff/carolina-zhou/blog-layout/index.html
@@ -8,7 +8,7 @@
   <title>Tres puntos: agencia de diseño web en Barcelona</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7COswald" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-  <link rel="stylesheet" href="estilos.css" type="text/css">
+  <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
 <body>
