improve main-content section

--- a/staff/carolina-zhou/blog-layout/index.html
+++ b/staff/carolina-zhou/blog-layout/index.html
@@ -18,10 +18,10 @@
             <img src="./img/logo-agency.png" alt="Logo de l'agència Tres puntos">
             <nav>
               <ul>
-                <li><a href="#sec1" title="Qué hacemos">Qué hacemos</a></li>
-                <li><a href="#sec2" title="Proyectos">Proyectos</a></li>
-                <li><a href="#sec4" title="Proceso">Proceso</a></li>
-                <li><a href="#sec7" title="Contacto">Contacto</a></li>
+                <li><a href="" title="Qué hacemos">Qué hacemos</a></li>
+                <li><a href="" title="Proyectos">Proyectos</a></li>
+                <li><a href="" title="Proceso">Proceso</a></li>
+                <li><a href="" title="Contacto">Contacto</a></li>
               </ul>
             </nav>
           <h1 class="title">Tres puntos: Diseño web en Barcelona</h1>
