--- a/staff/jorge-garces/blog-layout/index.html
+++ b/staff/jorge-garces/blog-layout/index.html
@@ -27,33 +27,57 @@
         <article>
             <section class='post'>
                 <h2>Shank burgdoggen jowl</h2>
-                <h5>Monday 21st November 18:36</h5>
+                <h5>Monday 21st November 18:36 by <a href="mailto:miley@cyrus.com">Miley</a></h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam at, rem odio deserunt alias
                     similique aliquid vel facilis temporibus quo eius, sunt voluptates qui a aspernatur ut ad id ipsam
                     quas dicta ratione! Deserunt, labore expedita libero rem ipsa quod.</p>
+                <h4>Tags: <span class='tags'>#felipe, #tío, #bueno</span></h4>
             </section>
             <section class='post'>
                 <h2>Lorem ipsum dolor sit amet.</h2>
-                <h5>Thursday 5th November 9:36</h5>
+                <h5>Thursday 5th November 9:36 by <a href="mailto:miley@cyrus.com">Miley</a></h5>
                 <p>Lorem ipsum dolor amet gentrify kitsch iPhone activated charcoal. Chambray mustache fingerstache
                     franzen biodiesel. Banh mi pok pok fam, cliche celiac neutra try-hard art party artisan taxidermy
                     woke lo-fi farm-to-table lumbersexual fixie. Ethical semiotics franzen kale chips. Locavore
                     letterpress raclette fam chambray bitters thundercats gastropub seitan flannel keffiyeh YOLO
                     scenester. </p>
+                <h4>Tags: <span class='tags'>#panceta, #morcilla, #jamón</span></h4>
             </section>
             <section class='post'>
                 <h2>Ethical semiotics franzen kale</h2>
-                <h5>Friday 18th October 21:40</h5>
+                <h5>Friday 18th October 21:40 by <a href="mailto:miley@cyrus.com">Miley</a></h5>
                 <p>Bacon ipsum dolor amet chuck pig drumstick, shankle pork loin jerky tenderloin brisket. Burgdoggen
                     tri-tip capicola brisket biltong flank corned beef beef turkey pancetta venison cupim tenderloin.
                     Shank burgdoggen jowl tenderloin turducken pastrami kevin spare ribs porchetta tongue pork belly ham
                     hock chicken.</p>
+                <h4>Tags: <span class='tags'>#apple, #lags, #behind</span></h4>
+            </section>
+            <section class='post'>
+                <h2>Ethical semiotics franzen kale</h2>
+                <h5>Friday 18th October 21:40 by <a href="mailto:miley@cyrus.com">Miley</a></h5>
+                <p>Bacon ipsum dolor amet chuck pig drumstick, shankle pork loin jerky tenderloin brisket. Burgdoggen
+                    tri-tip capicola brisket biltong flank corned beef beef turkey pancetta venison cupim tenderloin.
+                    Shank burgdoggen jowl tenderloin turducken pastrami kevin spare ribs porchetta tongue pork belly ham
+                    hock chicken.</p>
+                <p>Bacon ipsum dolor amet chuck pig drumstick, shankle pork loin jerky tenderloin brisket. Burgdoggen
+                    tri-tip capicola brisket biltong flank corned beef beef turkey pancetta venison cupim tenderloin.
+                </p>
+                <h4>Tags: <span class='tags'>#skylaber, #for, #life</span></h4>
+            </section>
+            <section class='post'>
+                <h2>Ethical semiotics franzen kale</h2>
+                <h5>Friday 18th October 21:40 by <a href="mailto:miley@cyrus.com">Miley</a></h5>
+                <p>Bacon ipsum dolor amet chuck pig drumstick, shankle pork loin jerky tenderloin brisket. Burgdoggen
+                    tri-tip capicola brisket biltong flank corned beef beef turkey pancetta venison cupim tenderloin.
+                    Shank burgdoggen jowl tenderloin turducken pastrami kevin spare ribs porchetta tongue pork belly ham
+                    hock chicken.</p>
+                <h4>Tags: <span class='tags'>#viva, #manolo, #escobar</span></h4>
             </section>
 
 
         </article>
         <aside>
-            <h3>About me:</h2>
+            <h3>About me</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta accusamus corrupti ullam? Magni
                     expedita, quis saepe hic, est optio neque blanditiis accusamus soluta recusandae et fuga debitis
                     dolorem eveniet. Aut ipsam eveniet reiciendis sunt incidunt, quod sequi cumque tempora! Eos laborum
