add submit button to comment section

--- a/staff/carolina-zhou/blog-layout/index.html
+++ b/staff/carolina-zhou/blog-layout/index.html
@@ -42,6 +42,7 @@
                         <fieldset>
                             <label for="comments">Comentarios:</label>
                             <textarea id= "comments" name="comments" title="comentario" placeholder="Escribe un comentario"></textarea>
+                            <button type="submit" value="submit">Enviar</button>
                         </fieldset>
                     </form>
                 </article>
@@ -55,6 +56,7 @@
                         <fieldset>
                             <label for="comments">Comentarios:</label>
                             <textarea id= "comments" name="comments" title="comentario" placeholder="Escribe un comentario"></textarea>
+                            <button type="submit" value="submit">Enviar</button>
                         </fieldset>
                     </form>
                 </article>
@@ -68,6 +70,7 @@
                         <fieldset>
                             <label for="comments">Comentarios:</label>
                             <textarea id= "comments" name="comments" title="comentario" placeholder="Escribe un comentario"></textarea>
+                            <button type="submit" value="submit">Enviar</button>
                         </fieldset>
                     </form>
                 </article>
@@ -81,6 +84,7 @@
                         <fieldset>
                             <label for="comments">Comentarios:</label>
                             <textarea id= "comments" name="comments" title="comentario" placeholder="Escribe un comentario"></textarea>
+                            <button type="submit" value="submit">Enviar</button>
                         </fieldset>
                     </form>
                 </article>
