--- a/staff/manuel-galvez/blog-layout/index.html
+++ b/staff/manuel-galvez/blog-layout/index.html
@@ -15,57 +15,68 @@
                 <img src="https://www.skylabcoders.com/images/403/default.png">
             </div>
             <ul>
-                <li>Courses</li>
-                <li>Community</li>
-                <li>Events</li>
-                <li>About</li>
+                <li><a href="#">Courses</a></li>
+                <li><a href="#">Community</a></li>
+                <li><a href="#">Events</a></li>
+                <li><a href="#">About</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <aside>
-            <div class="profile-container"></div>
+            <div class="profile-container">
+                <div class="profile-img">
+                    <img src="https://is5-ssl.mzstatic.com/image/thumb/Video118/v4/3a/da/d9/3adad999-6ed0-de80-6b7e-8fccca15f42e/source/560x315mv.jpg">
+                </div>
+                <div class="about-me-header">About me</div>
+                <div class="about-me-content">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500...
+                </div>
+            </div>
         </aside>
         <div class="article-container">
             <article>
-                <section>
-                    Title
+                <section class="article-img">
+                    <img src="https://i.blogs.es/3271ce/dmiqmwuuuaadddb/450_1000.jpg">
                 </section>
-                <section>
-                    Publish date
-                </section>
-                <section>
-                </section>
-            </article>
-            <article>
-                <section>
-                    Title
-                </section>
-                <section>
-                    Publish date
-                </section>
-                <section>
-                    Content
+                <section class="article-content">
+                    <h2 class="article-title">Spiderman 1</h3>
+                    <div class="article-publish">09 July 2019 16:23</div>
+                    <div class="article-intro">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </div>
                 </section>
             </article>
             <article>
-                <section>
-                    Title
+                <section class="article-img">
+                    <img src="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/styles/main_element/public/media/image/2019/07/spider-man-lejos-casa-ps4.jpg?itok=IlFSXYT0">
                 </section>
-                <section>
-                    Publish date
-                </section>
-                <section>
-                    Content
+                <section class="article-content">
+                    <h2 class="article-title">Spiderman 2</h3>
+                    <div class="article-publish">09 July 2019 16:23</div>
+                    <div class="article-intro">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </div>
                 </section>
             </article>
-            <div class="pagination">
-
+            <article>
+                <section class="article-img">
+                    <img src="https://fotografias.lasexta.com/clipping/cmsimages01/2017/05/08/F447BDCF-6FC0-4648-9579-2A3CDFCDF5E5/58.jpg">
+                </section>
+                <section class="article-content">
+                    <h2 class="article-title">Spiderman 3</h3>
+                    <div class="article-publish">09 July 2019 16:23</div>
+                    <div class="article-intro">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </div>
+                </section>
+            </article>
+           <div class="pagination">
             </div>
         </div>
     </main>
     <footer>
-
+        SkylabCoders Copyright © 2019
     </footer>
 </body>
 </html>
