last update blog arki

--- a/staff/adria-arquimbau/blog-layout/index.html
+++ b/staff/adria-arquimbau/blog-layout/index.html
@@ -11,11 +11,20 @@
 
 <body>
 
+<header>
   <div class="header">
     <h2>Arki's Blog  </h2>
     <img src="https://media.giphy.com/media/QOgvV9rV4hHpgNRBfQ/giphy.gif" alt="" style="width:100px;height:100px;">
   </div>
-
+  <nav>
+        <div class="nav">
+          <a class="footer1" href="#">Sobre Mi</a>
+          <a class="footer1" href="#">Popular Posts</a>
+          <a class="footer1" href="#">RRSS</a>
+        </div>
+    </nav>
+</head>
+  
   <div class="row">
     <div class="leftcolumn">
       <div class="card">
@@ -48,9 +57,14 @@
     </div>
   </div>
 
+<footer>
   <div class="footer">
-    <h2>Footer</h2>
+    <a class="footer1" href="#">Sobre Mi</a>
+    <a class="footer1" href="#">Popular Posts</a>
+    <a class="footer1" href="#">RRSS</a>
   </div>
+</footer>
+
 </body>
 
 </html>
