new update blog

--- a/staff/adria-arquimbau/blog-layout/index.html
+++ b/staff/adria-arquimbau/blog-layout/index.html
@@ -18,9 +18,9 @@
   </div>
   <nav>
         <div class="nav">
-          <a class="footer1" href="#">Sobre Mi</a>
-          <a class="footer1" href="#">Popular Posts</a>
-          <a class="footer1" href="#">RRSS</a>
+          <a class="nav1" href="#">Sobre Mi</a>
+          <a class="nav1" href="#">Popular Posts</a>
+          <a class="nav1" href="#">RRSS</a>
         </div>
     </nav>
 </head>
@@ -59,9 +59,9 @@
 
 <footer>
   <div class="footer">
-    <a class="footer1" href="#">Sobre Mi</a>
-    <a class="footer1" href="#">Popular Posts</a>
-    <a class="footer1" href="#">RRSS</a>
+    <a class="nav1" href="#">Sobre Mi</a>
+    <a class="nav1" href="#">Popular Posts</a>
+    <a class="nav1" href="#">RRSS</a>
   </div>
 </footer>
 
