last update arki's blog

--- a/staff/adria-arquimbau/blog-layout/index.html
+++ b/staff/adria-arquimbau/blog-layout/index.html
@@ -17,10 +17,12 @@
     <img src="https://media.giphy.com/media/QOgvV9rV4hHpgNRBfQ/giphy.gif" alt="" style="width:100px;height:100px;">
   </div>
   <nav>
-        <div class="nav">
+        <div id="menuToggle" class="nav">
+            <ul id="menu">
           <a class="nav1" href="#">Sobre Mi</a>
           <a class="nav1" href="#">Popular Posts</a>
           <a class="nav1" href="#">RRSS</a>
+            </ul>
         </div>
     </nav>
 </head>
