subs nav divs whith nav ul

--- a/staff/jose-ortuno/blog-layout/index.html
+++ b/staff/jose-ortuno/blog-layout/index.html
@@ -13,9 +13,11 @@
             <h2>LOREM IPSUM DOLOR</h2>
         </header>
         <nav>
-            <div><a href="@">LOREM</a></div>
-            <div><a href="@">IPSUM</a></div>
-            <div><a href="@">DOLOR</a></div>
+            <ul>
+                <li><a href="@">LOREM</a></li>
+                <li><a href="@">IPSUM</a></li>
+                <li><a href="@">DOLOR</a></li>
+            </ul>
         </nav>
         <div class="content">
             <main>
