fix typing errors

--- a/staff/carolina-zhou/skylab-semantics/community.html
+++ b/staff/carolina-zhou/skylab-semantics/community.html
@@ -5,16 +5,16 @@
      <button></button>
       <header>
         <h1><a><img></a>
-          <span\</span> </h1> <ul>
+            </h1> <ul>
             <li><strong></strong></li>
             <li></li>
             <li></a></li>
             </ul>
-            <form><span></span></form>
+            <form></form>
             <p><a></a></p>
             <button></button>
       </header>
-      <form><input><span></span></form>
+      <form><input></form>
       <nav>
         <h1></h1>
         <ul>
@@ -60,7 +60,7 @@
                 <ul>
                   <li></li>
                 </ul>
-                <h4><span></span></h4>
+                <h4></h4>
                 <p></p>
                 <h3></h3>
                 <article>
