add fix proposed in reviews

--- a/staff/manuel-galvez/blog-layout/index.html
+++ b/staff/manuel-galvez/blog-layout/index.html
@@ -36,9 +36,9 @@
         </aside>
         <div class="article-container">
             <article>
-                <section class="article-img">
+                <figure class="article-img">
                     <img src="https://i.blogs.es/3271ce/dmiqmwuuuaadddb/450_1000.jpg">
-                </section>
+                </figure>
                 <section class="article-content">
                     <h2 class="article-title">This is a longer title 1</h2>
                     <div class="article-publish">09 July 2019 16:23</div>
@@ -64,7 +64,7 @@
                     <img src="https://fotografias.lasexta.com/clipping/cmsimages01/2017/05/08/F447BDCF-6FC0-4648-9579-2A3CDFCDF5E5/58.jpg">
                 </section>
                 <section class="article-content">
-                    <h2 class="article-title">This is a longer title 3</h3>
+                    <h2 class="article-title">This is a longer title 3</h2>
                     <div class="article-publish">09 July 2019 16:23</div>
                     <div class="article-intro">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
