--- a/staff/manuel-galvez/blog-layout/index.html
+++ b/staff/manuel-galvez/blog-layout/index.html
@@ -25,9 +25,9 @@
     <main>
         <aside>
             <div class="profile-container">
-                <div class="profile-img">
+                <figure class="profile-img">
                     <img src="https://is5-ssl.mzstatic.com/image/thumb/Video118/v4/3a/da/d9/3adad999-6ed0-de80-6b7e-8fccca15f42e/source/560x315mv.jpg">
-                </div>
+                </figure>
                 <div class="about-me-header">About me</div>
                 <div class="about-me-content">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500...
@@ -48,11 +48,11 @@
                 </section>
             </article>
             <article>
-                <section class="article-img">
+                <figure class="article-img">
                     <img src="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/styles/main_element/public/media/image/2019/07/spider-man-lejos-casa-ps4.jpg?itok=IlFSXYT0">
-                </section>
+                </figure>
                 <section class="article-content">
-                    <h2 class="article-title">This is a longer title 2</h3>
+                    <h2 class="article-title">This is a longer title 2</h2>
                     <div class="article-publish">09 July 2019 16:23</div>
                     <div class="article-intro">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -60,9 +60,9 @@
                 </section>
             </article>
             <article>
-                <section class="article-img">
+                <figure class="article-img">
                     <img src="https://fotografias.lasexta.com/clipping/cmsimages01/2017/05/08/F447BDCF-6FC0-4648-9579-2A3CDFCDF5E5/58.jpg">
-                </section>
+                </figure>
                 <section class="article-content">
                     <h2 class="article-title">This is a longer title 3</h2>
                     <div class="article-publish">09 July 2019 16:23</div>
