new flex styles

--- a/staff/jaume-villarreal/mucho-layout/all/index.html
+++ b/staff/jaume-villarreal/mucho-layout/all/index.html
@@ -15,7 +15,7 @@
                 <span> studio. We create design with meaning from our locations </span><span> in Barcelona, Paris, San Francisco, New York and Sydney.</span>
                 <span>We’d love to hear from you at info@wearemucho.com</span>
         </p>
-        <nav>
+        <nav class="max-nav">
             <ul>
                 <li>
                     <a href="#">Work</a>
@@ -45,28 +45,28 @@
 
     <main>
         <article>
-            <img src="../img/img_00.jpg" alt="img_00.jpg">
+            <img src="http://source.unsplash.com/random/1000x750" alt="img_00.jpg">
         </article>
         <article>
-            <img src="../img/img_01.jpg" alt="img_01.jpg">
+            <img src="http://source.unsplash.com/random/1000x750" alt="img_01.jpg">
         </article>
         <article>
-            <img src="../img/img_02.jpg" alt="img_02.jpg">
+            <img src="http://source.unsplash.com/random/1000x750" alt="img_02.jpg">
         </article>
         <article>
-            <img src="../img/img_03.jpg" alt="img_03.jpg">
+            <img src="http://source.unsplash.com/random/1000x750" alt="img_03.jpg">
         </article>
         <article>
-            <img src="../img/img_04.jpg" alt="img_04.jpg">
+            <img src="http://source.unsplash.com/random/1000x750" alt="img_04.jpg">
         </article>
         <article>
-            <img src="../img/img_05.jpg" alt="img_05.jpg">
+            <img src="http://source.unsplash.com/random/1000x750" alt="img_05.jpg">
         </article>
         <article>
-            <img src="../img/img_06.jpg" alt="img_06.jpg">
+            <img src="http://source.unsplash.com/random/1000x750" alt="img_06.jpg">
         </article>
         <article>
-                <img src="../img/img_07.jpg" alt="img_07.jpg">
+            <img src="http://source.unsplash.com/random/1000x750" alt="img_07.jpg">
         </article>
         <article class="article-text">
                 <h3>@wearemucho</h3>
@@ -82,7 +82,7 @@
                 </p>
         </article>
         <article>
-                <img src="../img/img_08.jpg" alt="img_07.jpg">
+            <img src="http://source.unsplash.com/random/1000x750" alt="img_08.jpg">
         </article>    
     </main>
 
