reworked styles albert-fuente

--- a/staff/albert-fuente/mucho-layout/index.html
+++ b/staff/albert-fuente/mucho-layout/index.html
@@ -14,8 +14,12 @@
     <header>
         <div class="barra">
             <div class="b mucho">Mucho</div>
+            <div class="test">
+                <p>All Services</p>
+                <p>All Industries</p>
+            </div>
             <p class="b none">We are a strategy, branding, packaging, and graphic studio. We create design with meaning from our locations in Barcelona, Paris, San Francisco, New York and SydnWe’d love to hear from you at info@wearemucho.com</p>
-            <div class="b none">
+            <div class="b none" id="links">
                 <ul class="navlinks">
                     <li><a href="#">Work</a></li>
                     <li><a href="#">Strategy</a></li>
@@ -33,19 +37,35 @@
 
     <main>
         <div class="imagenes">
-            <div class="box2">1</div>
             
-            <div class="box2">TEST</div>
-            <div class="box2">3</div>
-            <div class="box2">4</div>
-            <div class="box2">5</div>
-            <div class="box2">6</div>
-            <div class="box2">7</div>
-            <div class="box2">8</div>
-            <div class="box2">9</div>
-            <div class="box2">10</div>
-            <div class="box2">11</div>
-            <div class="box2">12</div>
+            <div class="box2">
+                <p id="texting">Arrels Barcelona</p>
+            </div>
+            
+            <div class="box2">
+                    <p id="texting">Clippings</p>
+
+            </div>
+            <div class="box2">                    <p id="texting">The Ocean race</p>
+            </div>
+            <div class="box2">                    <p id="texting">Alpine Investors</p>
+            </div>
+            <div class="box2">                    <p id="texting">Mucho talks</p>
+            </div>
+            <div class="box2">                    <p id="texting">Paradigm</p>
+            </div>
+            <div class="box2">                    <p id="texting">Apple</p>
+            </div>
+            <div class="box2">                    <p id="texting">Martin Book</p>
+            </div>
+            <div class="box2">                    <p id="texting">Cuatrecases</p>
+            </div>
+            <div class="box2">                    <p id="texting">TeleMadrid</p>
+            </div>
+            <div class="box2">                    <p id="texting">Paypal</p>
+            </div>
+            <div class="box2">                    <p id="texting">Telerama</p>
+            </div>
             <div class="about">
                 <h4>About</h4>
                 <p>We create design with meaning. Great design speaks to your head, and your heart. It makes you feel different, and think differently. </p>
@@ -56,8 +76,12 @@
 
         <section id="contact">
             <p>We look forward to hearing from you.
-                    For new business, please contact the closest office directly.
-                    For general enquiries, please email us: info@wearemucho.com</p>
+                </p>
+            <p>For new business, please contact the closest office directly.
+                </p>
+            <p>For general enquiries, please email us: info@wearemucho.com
+                </p>
+
 
         </section>
 
