changed styles mucho albert-fuente

--- a/staff/albert-fuente/mucho-layout/index.html
+++ b/staff/albert-fuente/mucho-layout/index.html
@@ -38,7 +38,7 @@
     <main>
         <div class="imagenes">
             
-            <div class="box2">
+            <div class="box2 one">
                 <p id="texting">Arrels Barcelona</p>
             </div>
             
@@ -46,7 +46,7 @@
                     <p id="texting">Clippings</p>
 
             </div>
-            <div class="box2">                    <p id="texting">The Ocean race</p>
+            <div class="box2 ">                    <p id="texting">The Ocean race</p>
             </div>
             <div class="box2">                    <p id="texting">Alpine Investors</p>
             </div>
@@ -54,7 +54,7 @@
             </div>
             <div class="box2">                    <p id="texting">Paradigm</p>
             </div>
-            <div class="box2">                    <p id="texting">Apple</p>
+            <div class="box2 seven">                    <p id="texting">Apple</p>
             </div>
             <div class="box2">                    <p id="texting">Martin Book</p>
             </div>
