photo-grid ready

--- a/staff/manuel-galvez/mucho-layout/desktop/index.html
+++ b/staff/manuel-galvez/mucho-layout/desktop/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mucho Tablet</title>
+    <title>Mucho Desktop</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400&display=swap" rel="stylesheet">
 </head>
@@ -30,84 +30,113 @@
     </header>
     <main>
         <section class="photo-grid">
-            <figure class="photo-grid-item" id="a">
-                <img src="https://picsum.photos/300">
-            </figure>
-            <figure class="photo-grid-item" id="b">
-                <img src="https://picsum.photos/300">
-            </figure>
-            <figure class="photo-grid-item" id="c">
-                <img src="https://picsum.photos/300">
-            </figure>
-            <figure class="photo-grid-item" id="d">
-                <img src="https://picsum.photos/300">
-            </figure>
-            <figure class="photo-grid-item" id="e">
-                <img src="https://picsum.photos/300">
-            </figure>
-            <figure class="photo-grid-item" id="f">
-                <img src="https://picsum.photos/300">
-            </figure>
-            <figure class="photo-grid-item" id="g">
-                <img src="https://picsum.photos/300">
-            </figure>
-            <figure class="photo-grid-item" id="h">
-                <img src="https://picsum.photos/300">
-            </figure>
-            <figure class="photo-grid-item" id="i">
-                <img src="https://picsum.photos/300">
-            </figure>
-            <figure class="photo-grid-item" id="j">
-                <img src="https://picsum.photos/300">
-            </figure>
-            <figure class="photo-grid-item" id="k">
-                <img src="https://picsum.photos/300">
-            </figure>
-            <figure class="photo-grid-item" id="l">
-                <img src="https://picsum.photos/300">
-            </figure>
-            <figure class="photo-grid-item" id="m">
-                <img src="https://picsum.photos/300">
-            </figure>
-            <figure class="photo-grid-item" id="n">
-                <img src="https://picsum.photos/300">
-            </figure>
-            <figure class="photo-grid-item" id="o">
-                <img src="https://picsum.photos/300">
-            </figure>
-            <figure class="photo-grid-item" id="p">
-                <img src="https://picsum.photos/300">
-            </figure>
-            <figure class="photo-grid-item" id="q">
-                <img src="https://picsum.photos/300">
-            </figure>
-            <figure class="photo-grid-item" id="r">
-                <img src="https://picsum.photos/300">
-            </figure>
-            <article class="card photo-grid-item" id="s">
-                <section class="card-title">
-                    @wearemucho
-                </section>
-                <section class="card-content">
-                    Lorem fistrum pecador consectetur laboris no te digo trigo por no llamarte Rodrigor labore papaar papaar dolor de la pradera. Nisi caballo blanco caballo negroorl caballo blanco caballo negroorl diodeno.
-                </section>
+            <div class="large-four">
+                <figure class="photo-grid-item" id="a">
+                    <img src="https://picsum.photos/300">
+                </figure>
+                <figure class="photo-grid-item" id="b">
+                    <img src="https://picsum.photos/300">
+                </figure>
+                <figure class="photo-grid-item" id="c">
+                    <img src="https://picsum.photos/300">
+                </figure>
+                <figure class="photo-grid-item" id="d">
+                    <img src="https://picsum.photos/300">
+                </figure>
+            </div>
+            <div class="large-one">
+                <figure class="photo-grid-item" id="a">
+                    <img src="https://picsum.photos/300">
+                </figure>
+            </div>
+            <div class="large-six">
+                <div class="large-one">
+                    <figure class="photo-grid-item" id="d">
+                        <img src="https://picsum.photos/300">
+                    </figure>
+                </div>
+                <div class="small-two">
+                <figure class="photo-grid-item" id="b">
+                        <img src="https://picsum.photos/300">
+                    </figure>
+                    <figure class="photo-grid-item" id="c">
+                        <img src="https://picsum.photos/300">
+                    </figure>
+                </div>
+            </div>
+            <div class="large-six">
+                <div class="small-two">
+                    <figure class="photo-grid-item" id="b">
+                        <img src="https://picsum.photos/300">
+                    </figure>
+                    <figure class="photo-grid-item" id="c">
+                        <img src="https://picsum.photos/300">
+                    </figure>
+                </div>
+                <div class="large-one">
+                    <figure class="photo-grid-item" id="d">
+                        <img src="https://picsum.photos/300">
+                    </figure>
+                </div>
+            </div>
+           <div class="large-one">
+                <figure class="photo-grid-item" id="d">
+                    <img src="https://picsum.photos/300">
+                </figure>
+            </div>
+            <div class="large-four">
+                <figure class="photo-grid-item" id="a">
+                    <img src="https://picsum.photos/300">
+                </figure>
+                <figure class="photo-grid-item" id="b">
+                    <img src="https://picsum.photos/300">
+                </figure>
+                <figure class="photo-grid-item" id="c">
+                    <img src="https://picsum.photos/300">
+                </figure>
+                <figure class="photo-grid-item" id="d">
+                    <img src="https://picsum.photos/300">
+                </figure>
+            </div>
+            <div class="large-one">
+                <figure class="photo-grid-item" id="d">
+                    <img src="https://picsum.photos/300">
+                </figure>
+            </div>
+            <div class="large-four">
+                <figure class="photo-grid-item" id="d">
+                    <img src="https://picsum.photos/300">
+                </figure>
+                <article class="card photo-grid-item" id="s">
+                    <section class="card-title">
+                        @wearemucho
+                    </section>
+                    <section class="card-content">
+                        Lorem fistrum pecador consectetur laboris no te digo trigo por no llamarte Rodrigor labore papaar papaar dolor de la pradera. Nisi caballo blanco caballo negroorl caballo blanco caballo negroorl diodeno.
+                    </section>
+                </article>
+                <article class="card photo-grid-item" id="t">
+                    <section class="card-title">
+                        @wearemucho
+                    </section>
+                    <section class="card-content">
+                        Lorem fistrum pecador consectetur laboris no te digo trigo por no llamarte Rodrigor labore papaar papaar dolor de la pradera. Nisi caballo blanco caballo negroorl caballo blanco caballo negroorl diodeno.
+                    </section>
+                </article>
+                <article class="card photo-grid-item" id="u">
+                    <section class="card-title">
+                        @wearemucho
+                    </section>
+                    <section class="card-content">
+                        Lorem fistrum pecador consectetur laboris no te digo trigo por no llamarte Rodrigor labore papaar papaar dolor de la pradera. Nisi caballo blanco caballo negroorl caballo blanco caballo negroorl diodeno.
+                    </section>
             </article>
-            <article class="card photo-grid-item" id="t">
-                <section class="card-title">
-                    @wearemucho
-                </section>
-                <section class="card-content">
-                    Lorem fistrum pecador consectetur laboris no te digo trigo por no llamarte Rodrigor labore papaar papaar dolor de la pradera. Nisi caballo blanco caballo negroorl caballo blanco caballo negroorl diodeno.
-                </section>
-            </article>
-            <article class="card photo-grid-item" id="u">
-                <section class="card-title">
-                    @wearemucho
-                </section>
-                <section class="card-content">
-                    Lorem fistrum pecador consectetur laboris no te digo trigo por no llamarte Rodrigor labore papaar papaar dolor de la pradera. Nisi caballo blanco caballo negroorl caballo blanco caballo negroorl diodeno.
-                </section>
-            </article>
+            </div>
+
+
+
+
+            
         </section>
         <article class="greetings-container">
             <section class="greetings-content">
