--- a/staff/jaume-villarreal/mucho-layout/all/index.html
+++ b/staff/jaume-villarreal/mucho-layout/all/index.html
@@ -12,7 +12,8 @@
         <div class="logo"> <img src="../img/logo.svg" alt="logo"> </div>
         <p class="header-text">
                 <span>We are a strategy, branding, packaging, and graphic design.</span>
-                <span> studio. We create design with meaning from our locations </span><span> in Barcelona, Paris, San Francisco, New York and Sydney.</span>
+                <span> studio. We create design with meaning from our locations </span>
+                <span> in Barcelona, Paris, San Francisco, New York and Sydney.</span>
                 <span>We’d love to hear from you at info@wearemucho.com</span>
         </p>
         <nav class="max-nav">
@@ -56,6 +57,10 @@
         <article>
             <img src="http://source.unsplash.com/random/1000x750" alt="img_03.jpg">
         </article>
+        <article class="article-text">
+            <h3>@wearemucho</h3>
+            <p>What does brand strategy mean to you? How do powerful ideas become into powerful meaning? See our approach here:</p>
+    </article>
         <article>
             <img src="http://source.unsplash.com/random/1000x750" alt="img_04.jpg">
         </article>
@@ -69,10 +74,6 @@
             <img src="http://source.unsplash.com/random/1000x750" alt="img_07.jpg">
         </article>
         <article class="article-text">
-                <h3>@wearemucho</h3>
-                <p>What does brand strategy mean to you? How do powerful ideas become into powerful meaning? See our approach here:</p>
-        </article>
-        <article class="article-text">
                 <h3>Talking & Teaching</h3>
                 <p>PostGráfica is a masters course developed by Mucho on Strategic Thinking, Graphic Design and Creative Business. For more info: postgrafica.idepbarcelona.com</p>
         </article>
@@ -82,7 +83,7 @@
                 </p>
         </article>
         <article>
-            <img src="http://source.unsplash.com/random/1000x750" alt="img_08.jpg">
+            <img src="http://source.unsplash.com/random/1000x750" alt="img_0.jpg">
         </article>    
     </main>
 
