add BEM structure in index.html && create sass files Q =

--- a/staff/jaume-villarreal/mucho-layout/mobile-first/index.html
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="css/css/reset.css" type="text/css">
+    <link rel="stylesheet" href="css/css/style.css" type="text/css">
     <title>Mucho-layout</title>
 </head>
 <body>
     <header class="header">
         <div class="header__logo"> <img src="../img/logo.svg" alt="logo"> </div>
-        <p class="header__prsentatione">
+        <p class="header__presentation">
                 <span>We are a strategy, branding, packaging, and graphic design.</span>
                 <span> studio. We create design with meaning from our locations </span>
                 <span> in Barcelona, Paris, San Francisco, New York and Sydney.</span>
@@ -61,7 +62,7 @@
     <main class="mosaic">
         <div class="mosaic__tile">
             <figure>
-                <img src="http://source.unsplash.com/random/1000x751" alt="img_00.jpg">
+                <img src="http://source.unsplash.com/random/1000x750" alt="img_00.jpg">
             </figure>
             <p class="mosaic__text">
                 This is an example of text mosaic tile.
@@ -77,7 +78,7 @@
         </div>
         <div class="mosaic__tile">
             <figure>
-                <img src="http://source.unsplash.com/random/1000x751" alt="img_00.jpg">
+                <img src="http://source.unsplash.com/random/1000x752" alt="img_00.jpg">
             </figure>
             <p class="mosaic__text">
                 This is an example of text mosaic tile.
@@ -85,7 +86,7 @@
         </div>
         <div class="mosaic__tile">
             <figure>
-                <img src="http://source.unsplash.com/random/1000x751" alt="img_00.jpg">
+                <img src="http://source.unsplash.com/random/1000x753" alt="img_00.jpg">
             </figure>
             <p class="mosaic__text">
                 This is an example of text mosaic tile.
@@ -93,7 +94,7 @@
         </div>
         <div class="mosaic__tile">
             <figure>
-                <img src="http://source.unsplash.com/random/1000x751" alt="img_00.jpg">
+                <img src="http://source.unsplash.com/random/1000x754" alt="img_00.jpg">
             </figure>
             <p class="mosaic__text">
                 This is an example of text mosaic tile.
@@ -101,7 +102,7 @@
         </div>
         <div class="mosaic__tile">
             <figure>
-                <img src="http://source.unsplash.com/random/1000x751" alt="img_00.jpg">
+                <img src="http://source.unsplash.com/random/1000x755" alt="img_00.jpg">
             </figure>
             <p class="mosaic__text">
                 This is an example of text mosaic tile.
@@ -109,7 +110,7 @@
         </div>
         <div class="mosaic__tile">
             <figure>
-                <img src="http://source.unsplash.com/random/1000x751" alt="img_00.jpg">
+                <img src="http://source.unsplash.com/random/1000x756" alt="img_00.jpg">
             </figure>
             <p class="mosaic__text">
                 This is an example of text mosaic tile.
@@ -117,7 +118,7 @@
         </div>
         <div class="mosaic__tile">
             <figure>
-                <img src="http://source.unsplash.com/random/1000x751" alt="img_00.jpg">
+                <img src="http://source.unsplash.com/random/1000x757" alt="img_00.jpg">
             </figure>
             <p class="mosaic__text">
                 This is an example of text mosaic tile.
@@ -125,7 +126,7 @@
         </div>
         <div class="mosaic__tile">
             <figure>
-                <img src="http://source.unsplash.com/random/1000x751" alt="img_00.jpg">
+                <img src="http://source.unsplash.com/random/1000x758" alt="img_00.jpg">
             </figure>
             <p class="mosaic__text">
                 This is an example of text mosaic tile.
@@ -133,7 +134,7 @@
         </div>
         <div class="mosaic__tile">
             <figure>
-                <img src="http://source.unsplash.com/random/1000x751" alt="img_00.jpg">
+                <img src="http://source.unsplash.com/random/1000x759" alt="img_00.jpg">
             </figure>
             <p class="mosaic__text">
                 This is an example of text mosaic tile.
@@ -141,7 +142,7 @@
         </div>
         <div class="mosaic__tile">
             <figure>
-                <img src="http://source.unsplash.com/random/1000x751" alt="img_00.jpg">
+                <img src="http://source.unsplash.com/random/1000x760" alt="img_00.jpg">
             </figure>
             <p class="mosaic__text">
                 This is an example of text mosaic tile.
@@ -149,7 +150,7 @@
         </div>
         <div class="mosaic__tile">
             <figure>
-                <img src="http://source.unsplash.com/random/1000x751" alt="img_00.jpg">
+                <img src="http://source.unsplash.com/random/1000x761" alt="img_00.jpg">
             </figure>
             <p class="mosaic__text">
                 This is an example of text mosaic tile.
@@ -157,7 +158,7 @@
         </div>
         <div class="mosaic__tile">
             <figure>
-                <img src="http://source.unsplash.com/random/1000x751" alt="img_00.jpg">
+                <img src="http://source.unsplash.com/random/1000x762" alt="img_00.jpg">
             </figure>
             <p class="mosaic__text">
                 This is an example of text mosaic tile.
@@ -165,7 +166,7 @@
         </div>
         <div class="mosaic__tile">
             <figure>
-                <img src="http://source.unsplash.com/random/1000x751" alt="img_00.jpg">
+                <img src="http://source.unsplash.com/random/1000x763" alt="img_00.jpg">
             </figure>
             <p class="mosaic__text">
                 This is an example of text mosaic tile.
@@ -173,7 +174,7 @@
         </div>
         <div class="mosaic__tile">
             <figure>
-                <img src="http://source.unsplash.com/random/1000x751" alt="img_00.jpg">
+                <img src="http://source.unsplash.com/random/1000x764" alt="img_00.jpg">
             </figure>
             <p class="mosaic__text">
                 This is an example of text mosaic tile.
@@ -181,7 +182,7 @@
         </div>
         <div class="mosaic__tile">
             <figure>
-                <img src="http://source.unsplash.com/random/1000x751" alt="img_00.jpg">
+                <img src="http://source.unsplash.com/random/1000x765" alt="img_00.jpg">
             </figure>
             <p class="mosaic__text">
                 This is an example of text mosaic tile.
@@ -189,7 +190,7 @@
         </div>
         <div class="mosaic__tile">
             <figure>
-                <img src="http://source.unsplash.com/random/1000x751" alt="img_00.jpg">
+                <img src="http://source.unsplash.com/random/1000x766" alt="img_00.jpg">
             </figure>
             <p class="mosaic__text">
                 This is an example of text mosaic tile.
@@ -197,7 +198,7 @@
         </div>
         <div class="mosaic__tile">
             <figure>
-                <img src="http://source.unsplash.com/random/1000x751" alt="img_00.jpg">
+                <img src="http://source.unsplash.com/random/1000x767" alt="img_00.jpg">
             </figure>
             <p class="mosaic__text">
                 This is an example of text mosaic tile.
