--- a/staff/juan-bovo/mucho-layout/index.html
+++ b/staff/juan-bovo/mucho-layout/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mucho-layout</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css">
 </head>
 <body>
     <header>
@@ -29,7 +30,7 @@
         </div>
         <div id="navigators">
         <section class="navigation">
-        <h3>All Services</h3>
+        <h3>All Services &rsaquo;</h3>
         <ul>
             <li><a href="#">Item...</a></li>
             <li><a href="#">Item...</a></li>
@@ -48,7 +49,7 @@
         </ul>
         </section>
         <section class="navigation">
-        <h3>All Industries</h3><i class="fas fa-chevron-down"></i>
+        <h3>All Industries &rsaquo;</h3>
         <ul>
             <li><a href="#">Item...</a></li>
             <li><a href="#">Item...</a></li>
@@ -122,6 +123,17 @@
             <h2>Project</h2>
             <p>Project's designer-like pretentious description.</p>
         </div>
+        </div>
+        <div class="project-div">
+            <a href="#"><img src="http://placeimg.com/640/480/people?t=1562877254013" alt=""></a>
+            <h2>Project</h2>
+            <p>Project's designer-like pretentious description.</p>
+        </div>
+        <div class="project-div">
+            <a href="#"><img src="http://placeimg.com/640/480/tech?t=1562877254013" alt=""></a>
+            <h2>Project</h2>
+            <p>Project's designer-like pretentious description.</p>
+        </div>
     </main>
     <footer>
         <div>
@@ -129,8 +141,8 @@
         <p>For new business, please contact the closest office directly.</p>
         <p>For general enquiries, please email us: <a href="#">info@wearemucho.com</a></p>
         </div>
-        <div id="adresses">
-            <div>
+        <div class="addresses--wrapper">
+            <div class="address--location">
             <br>
             <h5>Barcelona</h5>
             <p>+34 93 481 40 89<br>
@@ -140,7 +152,7 @@
             08029 Barcelona<br></p>
             </div>
             <br>
-            <div>
+            <div class="address--location">
             <h5>San Francisco</h5>
             +1 415 546 1399<br>
             sanfrancisco@wearemucho.com<br>
@@ -149,7 +161,7 @@
             San Francisco, CA 94102</p>
             </div>
             <br>
-            <div>
+            <div class="address--location">
             <h5>Paris</h5>
             <p>+34 93 481 40 89<br>
             paris@wearemucho.com<br>
@@ -158,7 +170,7 @@
             75009 Paris<br></p>
             </div>
             <br>
-            <div>
+            <div class="address--location">
             <h5>New York</h5>
             <p>+34 93 481 40 89<br>
             newyork@wearemucho.com<br>
