--- a/staff/jaume-villarreal/mucho-layout/mobile-first/index.html
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/css/reset.css" type="text/css">
-    <link rel="stylesheet" href="css/css/style.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Franklin:100,200,300,400,600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>Mucho-layout</title>
 </head>
 <body>
@@ -44,17 +45,17 @@
         </nav>
         <nav class="header__min-nav">
             <div>
-                <img src="../img/icon/collapsed-menu.svg" alt="Menu">
+                <img class ="min-nav__icon" src="../img/icon/collapsed-menu.svg" alt="Menu">
             </div> 
         </nav>
     </header>
     <nav class="secondary-nav">
             <div class="secondary-nav__services">
-                <h2>All services</h2>
-                <img src="../img/icon/angle_down.svg" alt="Menu">
+                <h2 class="services__title">All Services</h2>
+                <img class="services__icon" src="../img/icon/angle_down.svg" alt="Menu">
             </div>
             <div class="secondary-nav__industries">
-                <h2>All industries</h2>
+                <h2>All Industries</h2>
                 <img src="../img/icon/angle_down.svg" alt="Menu">
             </div>
         </nav>
