update navigator down 3 boxes with grid

--- a/staff/adria-arquimbau/mucho-layout/mobile/index.html
+++ b/staff/adria-arquimbau/mucho-layout/mobile/index.html
@@ -94,12 +94,35 @@
 
     </main>
 
+    <nav class="contenedorNavInf">
+        <div class="footerBox">
+            <h5>Title</h5>
+            <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus adipisci iste iure veniam illo omnis modi vero impedit suscipit, ea delectus natus rem minima cum laboriosam esse aspernatur eligendi. Nihil.</p>
+        </div>
+        <div class="footerBox">
+            <h5>Title</h5>
+            <br>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque, fugiat aperiam! Blanditiis dolores eos sint, ratione saepe itaque inventore rem! Voluptatum nemo reiciendis obcaecati, exercitationem libero iure magnam modi dolorum?</p>
+        </div>
+        <div class="footerBox">
+            <h5>Title</h5>
+            <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur eligendi cum mollitia. Non, consequatur aliquid omnis enim voluptatem cupiditate eaque, iure dolor sint asperiores, quis dignissimos laborum vero dolorem quas.</p>
+        </div>
+    </nav>
+
     <footer>
 
-        <div class="cr">
-            <p>Copyright © 2019 Adrià Arquimbau Project, si lo copias te denunsio ;P</p>
+        <div>
+
+            <div class="cr">
+                <p>Copyright © 2019 Adrià Arquimbau Project, si lo copias te denunsio ;P</p>
+            </div>
+
         </div>
 
+        <p>Subscribe:</p>
         <a class="rrss" href="https://www.instagram.com/adriaarki/">
             <i class="fab fa-instagram"></i>
         </a>
