update all grip with oneBigImage in desktop v.

--- a/staff/adria-arquimbau/mucho-layout/mobile/index.html
+++ b/staff/adria-arquimbau/mucho-layout/mobile/index.html
@@ -135,6 +135,12 @@
         </div>
     </nav>
 
+    <!-- <aside>
+        <p>Esperamos con interés escuchar de usted.
+                Para nuevos negocios, comuníquese directamente con la oficina más cercana.
+                Para consultas generales, por favor envíenos un correo electrónico a info@wearemucho.com</p>
+    </aside> -->
+
     <footer>
 
         <div>
