all grid with 2 big IMG

--- a/staff/adria-arquimbau/mucho-layout/mobile/index.html
+++ b/staff/adria-arquimbau/mucho-layout/mobile/index.html
@@ -40,7 +40,7 @@
                     <div class="bigImg">
                         <img src="https://placeimg.com/640/480/nature" alt="">
                     </div>
-                    <div>
+                    <div class="bigImg2">
                         <img src="https://placeimg.com/640/480/arch" alt="">
                     </div>
                     <div>
