--- a/staff/juan-bovo/mucho-layout/index copia (previogrid).html
+++ b/staff/juan-bovo/mucho-layout/index copia (previogrid).html
@@ -30,44 +30,44 @@
         </div>
         <div id="navigators">
         <section class="navigation">
-        <h3 class="navigation__title list--item__color">All Services &rsaquo;</h3>
-        <ul class="dropdown__menu">
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#" class="dropdown__menu--item">Item...</a></li>
+        <h3 class="list--item__color">All Services &rsaquo;</h3>
+        <ul>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
         </ul>
         </section>
         <section class="navigation">
-        <h3 class="navigation__title list--item__color">All Industries &rsaquo;</h3>
-        <ul class="dropdown__menu">
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
-            <li><a href="#"  class="dropdown__menu--item">Item...</a></li>
+        <h3 class="list--item__color">All Industries &rsaquo;</h3>
+        <ul>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
+            <li><a href="#">Item...</a></li>
         </ul>
         </section>
         </div>
@@ -88,7 +88,7 @@
             <h3 class="project--title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
-        <div id="big1" class="project-div project-div__big">
+        <div class="project-div project-div__big">
             <div><a href="#"><img src="http://placeimg.com/640/480/people?t=1562877254013" alt=""></a></div>
             <h3 class="project--title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
@@ -103,7 +103,7 @@
             <h3 class="project--title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
-        <div id="big2" class="project-div project-div__big">
+        <div class="project-div project-div__big">
             <div><a href="#"><img src="http://placeimg.com/640/480/sepia?t=1562877254013" alt=""></a></div>
             <h3 class="project--title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
@@ -118,7 +118,7 @@
             <h3 class="project--title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
-        <div id="big3" class="project-div project-div__big">
+        <div class="project-div project-div__big">
             <div><a href="#"><img src="http://placeimg.com/640/480/nature?t=1562877254013" alt=""></a></div>
             <h3 class="project--title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
@@ -134,8 +134,6 @@
             <h3 class="project--title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
-    </main>
-    <section class="about__section">
         <div class="project-div project-description">
             <h3 class="project--title header--title">Project</h3>
             <p>What does brand strategy mean to you? How do powerful ideas become into powerful meaning? See our approach here:… t.co/dcF3a5b708</p>
@@ -148,7 +146,7 @@
             <h3 class="project--title header--title">Project</h3>
             <p>We create design with meaning. Great design speaks to your head, and your heart. It makes you feel different, and think differently.</p>
         </div>
-    </section>
+    </main>
     <footer>
         <div class="approach--paragraph">
         <p>We look forward to hearing from you.</p>
