--- a/staff/jaume-villarreal/mucho-layout/mobile-first/index.html
+++ b/staff/jaume-villarreal/mucho-layout/mobile-first/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>Mucho-layout</title>
 </head>
 <body>
     <header class="top-navigation">
-        <img class="top-navigation__logo"src="../img/logo.svg" alt="logo">
+        <div class="top-navigation__logo">
+                <img src="../img/logo.svg" alt="logo">
+        </div>
         <p class="top-navigation__presentation">
                 <span>We are a strategy, branding, packaging, and graphic design.</span>
                 <span> studio. We create design with meaning from our locations </span>
